--- a/prometheus/prometheus-service-account.yaml
+++ b/prometheus/prometheus-service-account.yaml
@@ -1,32 +1,54 @@
+apiVersion: template.openshift.io/v1
+kind: Template
+
+metadata:
+  name: prometheus-sa
+  annotations:
+    "openshift.io/display-name": Prometheus service account
+    description: |
+      Service account for Prometheus.
+    iconClass: icon-cogs
+    tags: "monitoring,prometheus,time-series"
+
+parameters:
+- description: The namespace where to deploy the Prometheus service.
+  name: NAMESPACE
+  required: true
+
+objects:
 # Service account used by Prometheus for target discovery
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: prometheus
----
+- apiVersion: v1
+  kind: ServiceAccount
+  metadata:
+    name: prometheus
+    namespace: "${NAMESPACE}"
+
 # Local role for listing services/endpoints/pods in the current namespace
-apiVersion: v1
-kind: Role
-metadata:
-  name: prometheus-reader
-rules:
-- apiGroups: null
-  attributeRestrictions: null
-  resources:
-  - pods
-  - endpoints
-  - services
-  verbs:
-  - get
-  - list
-  - watch
----
-apiVersion: v1
-kind: RoleBinding
-metadata:
-  name: prometheus-reader
-roleRef:
-  name: prometheus-reader
-subjects:
-- kind: ServiceAccount
-  name: prometheus
+- apiVersion: v1
+  kind: Role
+  metadata:
+    name: prometheus-reader
+    namespace: "${NAMESPACE}"
+  rules:
+  - apiGroups: null
+    attributeRestrictions: null
+    resources:
+    - pods
+    - endpoints
+    - services
+    verbs:
+    - get
+    - list
+    - watch
+
+- apiVersion: v1
+  kind: RoleBinding
+  metadata:
+    name: prometheus-reader
+    namespace: "${NAMESPACE}"
+  roleRef:
+    name: prometheus-reader
+    namespace: "${NAMESPACE}"
+  subjects:
+  - kind: ServiceAccount
+    name: prometheus
