Add OAuth proxy to the Prometheus HA example

--- a/prometheus_ha/prometheus-service-account.yaml
+++ b/prometheus_ha/prometheus-service-account.yaml
@@ -22,6 +22,9 @@ objects:
   metadata:
     name: prometheus
     namespace: "${NAMESPACE}"
+    annotations:
+      serviceaccounts.openshift.io/oauth-redirectreference.prom: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"prometheus"}}'
+      serviceaccounts.openshift.io/oauth-redirectreference.alerts: '{"kind":"OAuthRedirectReference","apiVersion":"v1","reference":{"kind":"Route","name":"alertmanager"}}'
 
 # Local role for listing services/endpoints/pods in the current namespace
 - apiVersion: v1
@@ -36,6 +39,7 @@ objects:
     - pods
     - endpoints
     - services
+    - namespaces
     verbs:
     - get
     - list
@@ -52,3 +56,16 @@ objects:
   subjects:
   - kind: ServiceAccount
     name: prometheus
+
+# Grant permissions to authenticate/authorize clients using tokens
+- apiVersion: v1
+  kind: ClusterRoleBinding
+  metadata:
+    name: prometheus-auth-delegator
+  roleRef:
+    kind: ClusterRole
+    name: system:auth-delegator
+  subjects:
+  - kind: ServiceAccount
+    name: prometheus
+    namespace: "${NAMESPACE}"
